--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="https://arxiv.org" class="btn">View Paper</a>
+        <a href="https://arxiv.org" class="btn">View on arXiv</a>
         <!--- <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a> --->
       {% endif %}
     </header>
