--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,10 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+        <a href="{{ site.github.repository_url }}" class="btn">Source Code</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="https://arxiv.org" class="btn">View on arXiv</a>
+        <a href="https://arxiv.org" class="btn">NAACL 2019 Paper</a>
         <!--- <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a> --->
       {% endif %}
     </header>
