--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
       {% endif %}
       {% if site.show_downloads %}
         <a href="https://arxiv.org" class="btn">NAACL 2019 Paper</a>
+        <a href="https://www.youtube.com/watch?v=irVqAjt664s" class="btn">Video on Youtube</a>
         <!--- <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a> --->
       {% endif %}
     </header>
