--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">Source Code</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="https://arxiv.org" class="btn">NAACL 2019 Paper</a>
+        <a href="https://arxiv.org/abs/1905.00563" class="btn">NAACL 2019 Paper</a>
         <a href="https://www.youtube.com/watch?v=irVqAjt664s" class="btn">Video on Youtube</a>
         <!--- <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a> --->
       {% endif %}
